force-app/main/default/objects/Opportunity_Stage_History__c/Opportunity_Stage_History__c.object-meta.xml
<CustomObject>
    <label>Opportunity Stage History</label>
    <nameField>
        <displayFormat>OS-{0000}</displayFormat>
        <label>Opportunity Stage History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stage History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>