force-app/main/default/objects/Opportunity_Stage_History__c/fields/Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Changed_Date__c</fullName>
    <label>Changed Date</label>
    <type>Date</type>
</CustomField>