force-app/main/default/objects/Opportunity_Stage_History__c/fields/Old_Stage__c.field-meta.xml
<CustomField>
    <fullName>Old_Stage__c</fullName>
    <label>Old Stage</label>
    <length>25</length>
    <type>Text</type>
</CustomField>